// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`G-UT-SNAPSHOT: Get Started Page Snapshot Tests should match get started page snapshot 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-indigo-50 via-white to-purple-50 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900"
>
  <div
    class="min-h-screen flex items-center justify-center px-4"
  >
    <div
      class="max-w-4xl w-full"
    >
      <div
        class="text-center mb-12"
      >
        <h1
          class="text-4xl md:text-5xl font-bold text-gray-900 dark:text-white mb-4"
        >
          Choose Your Learning Style
        </h1>
        <p
          class="text-xl text-gray-600 dark:text-gray-300 max-w-2xl mx-auto"
        >
          Select how you'd like to learn and we'll customize your experience accordingly.
        </p>
      </div>
      <div
        class="user-type-selector "
      >
        <div
          class="grid md:grid-cols-2 gap-6 max-w-4xl mx-auto"
        >
          <div
            class="relative p-8 rounded-2xl border-2 transition-all duration-300 cursor-pointer group border-gray-200 dark:border-gray-700 hover:border-indigo-300 dark:hover:border-indigo-600"
          >
            <div
              class="text-center"
            >
              <div
                class="w-16 h-16 mx-auto mb-6 rounded-full bg-gradient-to-r from-indigo-500 to-purple-600 flex items-center justify-center group-hover:scale-110 transition-transform duration-300"
              >
                <span
                  data-testid="map-icon"
                >
                  🗺️
                </span>
              </div>
              <h3
                class="text-xl font-semibold text-gray-900 dark:text-white mb-3"
              >
                I need guidance
              </h3>
              <p
                class="text-gray-600 dark:text-gray-400 mb-6 leading-relaxed"
              >
                Show me structured learning paths with clear milestones and progress tracking
              </p>
              <div
                class="space-y-2 text-sm text-gray-500 dark:text-gray-400"
              >
                <div
                  class="flex items-center justify-center space-x-2"
                >
                  <div
                    class="w-2 h-2 bg-indigo-500 rounded-full"
                  />
                  <span>
                    Pre-defined learning paths
                  </span>
                </div>
                <div
                  class="flex items-center justify-center space-x-2"
                >
                  <div
                    class="w-2 h-2 bg-indigo-500 rounded-full"
                  />
                  <span>
                    Progress tracking & milestones
                  </span>
                </div>
                <div
                  class="flex items-center justify-center space-x-2"
                >
                  <div
                    class="w-2 h-2 bg-indigo-500 rounded-full"
                  />
                  <span>
                    Expert-curated content
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="relative p-8 rounded-2xl border-2 transition-all duration-300 cursor-pointer group border-gray-200 dark:border-gray-700 hover:border-indigo-300 dark:hover:border-indigo-600"
          >
            <div
              class="text-center"
            >
              <div
                class="w-16 h-16 mx-auto mb-6 rounded-full bg-gradient-to-r from-purple-500 to-pink-600 flex items-center justify-center group-hover:scale-110 transition-transform duration-300"
              >
                <span
                  data-testid="compass-icon"
                >
                  🧭
                </span>
              </div>
              <h3
                class="text-xl font-semibold text-gray-900 dark:text-white mb-3"
              >
                I'm self-directed
              </h3>
              <p
                class="text-gray-600 dark:text-gray-400 mb-6 leading-relaxed"
              >
                Let me create my own roadmap and explore content at my own pace
              </p>
              <div
                class="space-y-2 text-sm text-gray-500 dark:text-gray-400"
              >
                <div
                  class="flex items-center justify-center space-x-2"
                >
                  <div
                    class="w-2 h-2 bg-purple-500 rounded-full"
                  />
                  <span>
                    Custom roadmap builder
                  </span>
                </div>
                <div
                  class="flex items-center justify-center space-x-2"
                >
                  <div
                    class="w-2 h-2 bg-purple-500 rounded-full"
                  />
                  <span>
                    Flexible learning schedule
                  </span>
                </div>
                <div
                  class="flex items-center justify-center space-x-2"
                >
                  <div
                    class="w-2 h-2 bg-purple-500 rounded-full"
                  />
                  <span>
                    Explore all content freely
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`G-UT-SNAPSHOT: Get Started Page Snapshot Tests should match snapshot with loading transition 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-indigo-50 via-white to-purple-50 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900"
>
  <div
    class="fixed inset-0 bg-black bg-opacity-75 z-50 flex items-center justify-center"
  >
    <div
      class="text-center"
    >
      <div
        class="animate-spin rounded-full h-12 w-12 border-b-2 border-indigo-600 mx-auto mb-4"
      />
      <p
        class="text-white text-lg"
      >
        Loading your learning experience...
      </p>
    </div>
  </div>
  <div
    class="min-h-screen flex items-center justify-center px-4"
  >
    <div
      class="max-w-4xl w-full"
    >
      <div
        class="text-center mb-12"
      >
        <h1
          class="text-4xl md:text-5xl font-bold text-gray-900 dark:text-white mb-4"
        >
          Choose Your Learning Style
        </h1>
        <p
          class="text-xl text-gray-600 dark:text-gray-300 max-w-2xl mx-auto"
        >
          Select how you'd like to learn and we'll customize your experience accordingly.
        </p>
      </div>
      <div
        class="user-type-selector "
      >
        <div
          class="grid md:grid-cols-2 gap-6 max-w-4xl mx-auto"
        >
          <div
            class="relative p-8 rounded-2xl border-2 transition-all duration-300 cursor-pointer group border-indigo-500 bg-indigo-50 dark:bg-indigo-900/20"
          >
            <div
              class="absolute top-4 right-4"
            >
              <span
                data-testid="check-icon"
              >
                ✓
              </span>
            </div>
            <div
              class="text-center"
            >
              <div
                class="w-16 h-16 mx-auto mb-6 rounded-full bg-gradient-to-r from-indigo-500 to-purple-600 flex items-center justify-center group-hover:scale-110 transition-transform duration-300"
              >
                <span
                  data-testid="map-icon"
                >
                  🗺️
                </span>
              </div>
              <h3
                class="text-xl font-semibold text-gray-900 dark:text-white mb-3"
              >
                I need guidance
              </h3>
              <p
                class="text-gray-600 dark:text-gray-400 mb-6 leading-relaxed"
              >
                Show me structured learning paths with clear milestones and progress tracking
              </p>
              <div
                class="space-y-2 text-sm text-gray-500 dark:text-gray-400"
              >
                <div
                  class="flex items-center justify-center space-x-2"
                >
                  <div
                    class="w-2 h-2 bg-indigo-500 rounded-full"
                  />
                  <span>
                    Pre-defined learning paths
                  </span>
                </div>
                <div
                  class="flex items-center justify-center space-x-2"
                >
                  <div
                    class="w-2 h-2 bg-indigo-500 rounded-full"
                  />
                  <span>
                    Progress tracking & milestones
                  </span>
                </div>
                <div
                  class="flex items-center justify-center space-x-2"
                >
                  <div
                    class="w-2 h-2 bg-indigo-500 rounded-full"
                  />
                  <span>
                    Expert-curated content
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="relative p-8 rounded-2xl border-2 transition-all duration-300 cursor-pointer group border-gray-200 dark:border-gray-700 hover:border-indigo-300 dark:hover:border-indigo-600"
          >
            <div
              class="text-center"
            >
              <div
                class="w-16 h-16 mx-auto mb-6 rounded-full bg-gradient-to-r from-purple-500 to-pink-600 flex items-center justify-center group-hover:scale-110 transition-transform duration-300"
              >
                <span
                  data-testid="compass-icon"
                >
                  🧭
                </span>
              </div>
              <h3
                class="text-xl font-semibold text-gray-900 dark:text-white mb-3"
              >
                I'm self-directed
              </h3>
              <p
                class="text-gray-600 dark:text-gray-400 mb-6 leading-relaxed"
              >
                Let me create my own roadmap and explore content at my own pace
              </p>
              <div
                class="space-y-2 text-sm text-gray-500 dark:text-gray-400"
              >
                <div
                  class="flex items-center justify-center space-x-2"
                >
                  <div
                    class="w-2 h-2 bg-purple-500 rounded-full"
                  />
                  <span>
                    Custom roadmap builder
                  </span>
                </div>
                <div
                  class="flex items-center justify-center space-x-2"
                >
                  <div
                    class="w-2 h-2 bg-purple-500 rounded-full"
                  />
                  <span>
                    Flexible learning schedule
                  </span>
                </div>
                <div
                  class="flex items-center justify-center space-x-2"
                >
                  <div
                    class="w-2 h-2 bg-purple-500 rounded-full"
                  />
                  <span>
                    Explore all content freely
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="text-center mt-8"
        >
          <div
            class="inline-flex items-center space-x-2 text-indigo-600 dark:text-indigo-400 font-medium"
          >
            <span>
              Great choice!
            </span>
            <span
              data-testid="arrow-right-icon"
            >
              →
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
